[gd_scene load_steps=6 format=3 uid="uid://bqqyx7a8warb5"]

[ext_resource type="Script" path="res://Scenes/Ui/ui.gd" id="1_t0ujw"]
[ext_resource type="Texture2D" uid="uid://b44y58jte2cpy" path="res://Assets/UI/Fuel_bar/back.png" id="2_f2pyx"]
[ext_resource type="Texture2D" uid="uid://bh87gplpyxxw2" path="res://Assets/UI/Fuel_bar/front.png" id="3_eegoq"]
[ext_resource type="Texture2D" uid="uid://dlagrhv56p0yt" path="res://Assets/UI/Fuel_bar/progress.png" id="4_ojbfk"]

[sub_resource type="Theme" id="Theme_1n4sg"]
default_font_size = 40

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_t0ujw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Fuel_lvl" type="TextureProgressBar" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0
texture_under = ExtResource("2_f2pyx")
texture_over = ExtResource("3_eegoq")
texture_progress = ExtResource("4_ojbfk")

[node name="scoreLabel" type="Label" parent="."]
offset_left = 588.0
offset_top = 76.0
offset_right = 738.0
offset_bottom = 131.0
theme = SubResource("Theme_1n4sg")
theme_type_variation = &"HeaderLarge"

[node name="fuelLabel" type="Label" parent="."]
offset_left = 338.0
offset_top = 52.0
offset_right = 378.0
offset_bottom = 107.0
